--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.dll
 *.so
 *.dylib
+*.env
 
 # Test binary, built with `go test -c`
 *.test
@@ -22,5 +23,4 @@ go.work
 .idea
 
 .vscode
-cmd/main/__debug_bin3171543303
-cmd/main/__debug_bin384376710
+
