--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -30,3 +30,16 @@ jobs:
         run: go build -v ./...
       - name: Test
         run: go test -v ./...
+
+  you-note-deploy:
+    name: Deploy YouNote
+    needs: you-note-tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Pull code
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.PRIVATE_KEY }}
+          script: cd /home/ubuntu/backend/2024_1_scratch_senior_devs && git pull && touch here.txt
