--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -42,7 +42,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: cd /home/ubuntu/backend/2024_1_scratch_senior_devs && git pull
+          script: cd /home/${{ secrets.USERNAME }}/backend/2024_1_scratch_senior_devs && git pull
       - name: Build containers
         uses: appleboy/ssh-action@master
         with:
@@ -50,11 +50,11 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: cd /home/ubuntu/backend/2024_1_scratch_senior_devs && sudo docker-compose build
+          script: cd /home/${{ secrets.USERNAME }}/backend/2024_1_scratch_senior_devs && sudo docker compose build
       - name: Restart service
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
-          script: cd /home/ubuntu/backend/2024_1_scratch_senior_devs && sudo docker-compose down && sudo docker-compose up -d
+          script: cd /home/${{ secrets.USERNAME }}/backend/2024_1_scratch_senior_devs && sudo docker compose down && sudo docker compose up -d
