some changes in models & away from pointers

--- a/MakeFile
+++ b/MakeFile
@@ -1,6 +1,6 @@
 cover:
 	go test -json ./... -coverprofile coverprofile_.tmp -coverpkg=./... ; \
-    cat coverprofile_.tmp | grep -v mock.go > coverprofile.tmp ; \
+    grep -v -e 'mock.go' -e 'docs.go' coverprofile_.tmp > coverprofile.tmp ; \
     rm coverprofile_.tmp ; \
     go tool cover -html coverprofile.tmp ; \
     go tool cover -func coverprofile.tmp
@@ -11,4 +11,7 @@ test:
 lint:
 	golangci-lint run --config=.golangci.yaml 
 swag_gen:
-    $HOME/go/bin/swag init -d cmd/main/ --parseInternal --output swagger --parseDependency 
+    $HOME/go/bin/swag init -d cmd/main/ --parseInternal --output swagger --parseDependency
+
+mock_gen:
+	go generate ./...
