--- a/MakeFile
+++ b/MakeFile
@@ -11,7 +11,7 @@ test:
 lint:
 	golangci-lint run --config=.golangci.yaml 
 swag_gen:
-    $HOME/go/bin/swag init -d cmd/main/ --parseInternal --output internal/docs --parseDependency
+    $HOME/go/bin/swag init -d cmd/main/ --parseInternal --output internal/pkg/docs --parseDependency
 
 mock_gen:
 	go generate ./...
