--- a/MakeFile
+++ b/MakeFile
@@ -1,6 +1,6 @@
 cover:
 	go test -json ./... -coverprofile coverprofile_.tmp -coverpkg=./... ; \
-    grep -v -e 'mock.go' -e 'docs.go'  coverprofile_.tmp > coverprofile.tmp ; \
+    grep -v -e 'mock.go' -e 'docs.go' -e '_easyjson.go' coverprofile_.tmp > coverprofile.tmp ; \
     rm coverprofile_.tmp ; \
     go tool cover -html coverprofile.tmp -o ../heatmap.html; \
     go tool cover -func coverprofile.tmp
@@ -11,7 +11,10 @@ test:
 lint:
 	golangci-lint run --config=.golangci.yaml 
 swag_gen:
-    $HOME/go/bin/swag init -d cmd/main/ --parseInternal --output internal/pkg/docs --parseDependency
+    GOPATH/bin/swag init -d cmd/main/ --parseInternal --output internal/pkg/docs --parseDependency
 
 mock_gen:
 	go generate ./...
+
+easyjson:
+	easyjson -all -pkg ./internal/models/
