fixed avatar extensions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,8 @@ services:
         target: /opt
     ports:
       - 80:80
+    networks:
+      - YouNote-network
 
 networks:
   YouNote-network:
