--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,14 @@
-events {}
+server {
+    listen 80;
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
-http {
-    include mime.types;
+    location /api/ {
+        proxy_pass http://you-note.ru:8080/api/;
+    }
 
-    server {
-        listen 80;
-        access_log /var/log/nginx/access.log;
-        error_log /var/log/nginx/error.log;
-
-        location /api/ {
-            proxy_pass http://localhost:8080;
-        }
-
-        location / {
-            root /opt;
-            try_files $uri =404;
-        }
+    location / {
+        root /opt;
+        try_files $uri =404;
     }
 }
