--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,36 @@
-server {
-    listen 80;
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+events {}
 
-    location /api/ {
-        proxy_pass http://you-note.ru:8080/api/;
+http {
+    server {
+        listen 443 ssl;
+
+        ssl_certificate /etc/letsencrypt/live/you-note.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/you-note.ru/privkey.pem;
+
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
+
+        location /api/ {
+            proxy_pass http://you-note.ru:8080/api/;
+        }
+
+        location / {
+            root /opt;
+            etag on;
+            try_files $uri =404;
+        }
     }
 
-    location / {
-        root /opt;
-        try_files $uri =404;
+    server {
+        access_log /var/log/nginx/access_http.log;
+        error_log /var/log/nginx/error_http.log;
+
+        if ($host = you-note.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        listen 80;
+        server_name you-note.ru;
+        return 404;
     }
 }
