--- a/nginx.conf
+++ b/nginx.conf
@@ -14,9 +14,14 @@ http {
             proxy_pass http://you-note.ru:8080/api/;
         }
 
-        location / {
-            root /opt;
+        location /images/ {
+            root /opt/images;
             etag on;
+            try_files $uri =404;
+        }
+
+        location / {
+            root /opt/public;
             try_files $uri =404;
         }
     }
