nginx conf done

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,14 +15,14 @@ http {
         }
 
         location /images/ {
-            root /opt/images;
+            alias /opt/images/;
             etag on;
-            try_files $uri =404;
+            try_files $uri = 404;
         }
 
         location / {
-            root /opt/public;
-            try_files $uri =404;
+            alias /opt/public/;
+            try_files $uri = 404;
         }
     }
 
