same site --> lax

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,8 @@ http {
 
         location / {
             alias /opt/public/;
-            try_files $uri = 404;
+            try_files $uri $uri/ /index.html;
+            index index.html;
         }
     }
 
