nginx max upload file size

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,9 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
+        client_max_body_size 5M;
+        fastcgi_read_timeout 300;
+
         location /api/ {
             proxy_pass http://you-note.ru:8080/api/;
         }
