--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ http {
         error_log /var/log/nginx/error.log;
 
         location /api/ {
+            client_max_body_size 10M;
             proxy_pass http://you-note.ru:8080/api/;
         }
 
