--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     depends_on:
       postgres:
         condition: service_started
+      redis:
+        condition: service_started
     restart: always
     ports:
       - "8080:8080"
@@ -66,6 +68,20 @@ services:
       - 80:80
     networks:
       - YouNote-network
+  redis:
+    container_name: redis
+    image: redis:latest
+    command:
+      - /bin/sh
+      - -c
+      - redis-server --requirepass ${REDIS_PASSWORD}
+    volumes:
+      - younote-redis-data:/var/lib/redis/data
+      - ./redis.conf:/usr/local/etc/redis/redis.conf
+    ports:
+      - "6379:6379"
+    env_file:
+      - .env
 
 networks:
   YouNote-network:
@@ -74,3 +90,4 @@ networks:
 
 volumes:
   younote-db-data:
+  younote-redis-data:
