repair nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,8 @@ events {}
 http {
     include mime.types;
 
+    limit_req_zone $binary_remote_addr zone=ip:100m rate=50r/s;
+
     server {
         listen 443 ssl;
 
@@ -13,6 +15,7 @@ http {
         error_log /var/log/nginx/error.log;
 
         location /api/ {
+            limit_req zone=ip burst=12 delay=8;
             client_max_body_size 10M;
             proxy_pass http://you-note.ru:8080/api/;
         }
