try to up redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,8 @@ services:
       - "127.0.0.1:6379:6379"
     env_file:
       - .env
+    networks:
+      - YouNote-network
 
 networks:
   YouNote-network:
