--- a/nginx.conf
+++ b/nginx.conf
@@ -16,12 +16,18 @@ http {
 
         location /api/ {
             limit_req zone=ip burst=12 delay=8;
-            client_max_body_size 10M;
+            client_max_body_size 40M;
             proxy_pass http://you-note.ru:8080/api/;
         }
 
         location /images/ {
             alias /opt/images/;
+            etag on;
+            try_files $uri = 404;
+        }
+
+        location /attaches/ {
+            alias /opt/attaches/;
             etag on;
             try_files $uri = 404;
         }
