--- a/nginx.conf
+++ b/nginx.conf
@@ -7,6 +7,10 @@ http {
 
     server {
         listen 443 ssl;
+        http2 on;
+
+        ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+        add_header Strict-Transport-Security "max-age=15768000" always;
 
         ssl_certificate /etc/letsencrypt/live/you-note.ru/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/you-note.ru/privkey.pem;
