--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -10,12 +10,16 @@ jobs:
     name: linters
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: '1.21'
-      - uses: actions/checkout@v3
+          cache: false
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: v1.54
+
   you-note-tests:
     name: tests
     needs: you-note-linters
