--- a/nginx.conf
+++ b/nginx.conf
@@ -4,10 +4,14 @@ http {
     include mime.types;
 
     limit_req_zone $binary_remote_addr zone=ip:100m rate=50r/s;
+    limit_conn_zone $binary_remote_addr zone=addr:100m; 
 
     server {
         listen 443 ssl;
         http2 on;
+
+        http2_max_concurrent_streams 128; #is default
+        keepalive_requests 1000; #is default
 
         ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
         add_header Strict-Transport-Security "max-age=15768000" always;
@@ -18,8 +22,16 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
+        gzip on;
+        gzip_types      text/plain ;
+        gzip_proxied    no-cache no-store private expired auth;
+        gzip_min_length 1000;
+
+
         location /api/ {
             limit_req zone=ip burst=12 delay=8;
+            limit_conn addr 5;
+
             client_max_body_size 40M;
             proxy_pass http://you-note.ru:8080/api/;
         }
@@ -30,11 +42,11 @@ http {
             try_files $uri = 404;
         }
 
-        location /attaches/ {
-            alias /opt/attaches/;
-            etag on;
-            try_files $uri = 404;
-        }
+#        location /attaches/ {
+#            alias /opt/attaches/;
+#            etag on;
+#            try_files $uri = 404;
+#        }
 
         location / {
             alias /opt/public/;
