--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,8 @@ http {
         listen 443 ssl;
         http2 on;
 
-        http2_max_concurrent_streams 128; #is default
-        keepalive_requests 1000; #is default
+        http2_max_concurrent_streams 128;
+        keepalive_requests 1000;
 
         ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
         add_header Strict-Transport-Security "max-age=15768000" always;
@@ -41,12 +41,6 @@ http {
             etag on;
             try_files $uri = 404;
         }
-
-#        location /attaches/ {
-#            alias /opt/attaches/;
-#            etag on;
-#            try_files $uri = 404;
-#        }
 
         location / {
             alias /opt/public/;
