--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,10 +1,13 @@
 linters-settings:
+  gosec:
+      checks:
+        - all
+        - '-G101' # disable the rule 
   gocognit:
     min-complexity: 60
 
 linters:
-  disable: 
-    - typecheck
+  disable-all: true
   enable:
     - govet
     - gosimple
@@ -15,5 +18,6 @@ linters:
     - goconst
     - gofmt
     - gosec
+  
   
    
