webp in attaches

--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -30,6 +30,7 @@ attach:
     audio/vnd.wav: .wav
     image/gif: .gif
     image/jpeg: .jpeg
+    image/webp: .webp
     image/png: .png
     video/mp4: .mp4
 elastic:
