--- a/nginx.conf
+++ b/nginx.conf
@@ -32,6 +32,8 @@ http {
             limit_req zone=ip burst=12 delay=8;
             limit_conn addr 5;
 
+            proxy_set_header X-Real-IP $remote_addr;
+
             client_max_body_size 40M;
             proxy_pass http://you-note.ru:8080/api/;
         }
