--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -33,6 +33,7 @@ attach:
     image/webp: .webp
     image/png: .png
     video/mp4: .mp4
+    application/pdf: .pdf
 elastic:
   elastic_index_name: notes
   elastic_search_value_min_length: 3
