wrote auth main

--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -37,6 +37,9 @@ attach:
 elastic:
   elastic_index_name: notes
   elastic_search_value_min_length: 3
+grpc:
+  auth_port: 8081
+  auth_ip: 172.0.0.17 # it`s only example
 
 
 
