--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     ports:
       - "8080:8080"
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.6
     volumes:
       - type: bind
         source: /var/log/
@@ -48,7 +49,8 @@ services:
     ports:
       - "8081:8081"
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.7
     volumes:
       - type: bind
         source: /var/log/
@@ -68,7 +70,8 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.3
     volumes:
       - ./build/sql/create_tables.sql:/docker-entrypoint-initdb.d/initdb.sql
       - younote-db-data:/var/lib/postgresql/data
@@ -101,7 +104,8 @@ services:
       - "443:443"
       - "80:80"
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.2
   redis:
     container_name: redis
     image: redis:latest
@@ -117,7 +121,8 @@ services:
     env_file:
       - .env
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.4
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.19
     container_name: elastic
@@ -144,12 +149,17 @@ services:
     env_file:
       - .env
     networks:
-      - YouNote-network
+      YouNote-network:
+        ipv4_address: 10.5.0.5
 
 networks:
   YouNote-network:
     name: YouNote-network
     driver: bridge
+    ipam:
+     config:
+       - subnet: 10.5.0.0/16
+         gateway: 10.5.0.1
 
 volumes:
   younote-db-data:
