--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -39,7 +39,7 @@ elastic:
   elastic_search_value_min_length: 3
 grpc:
   auth_port: 8081
-  auth_ip: 127.0.0.1 # it`s only example
+  auth_ip: 10.5.0.7
   note_port: 8082
   note_ip: 127.0.0.1 # it`s only example
 
