--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,28 @@ services:
       - type: bind
         source: /opt/images/
         target: /opt/images/
+    note:
+      container_name: note
+      build:
+        context: .
+        dockerfile: ./build/note.Dockerfile
+      env_file:
+        - .env
+      depends_on:
+        postgres:
+          condition: service_started
+        elastic:
+          condition: service_started
+      restart: always
+      ports:
+        - "8082:8082"
+      networks:
+        YouNote-network:
+          ipv4_address: 10.5.0.8
+      volumes:
+        - type: bind
+          source: /var/log/
+          target: /var/log/
   postgres:
     env_file:
       - .env
