--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ services:
     ports:
       - "8080:8080"
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.6
+      - YouNote-network
     volumes:
       - type: bind
         source: /var/log/
@@ -49,8 +48,7 @@ services:
     ports:
       - "8081:8081"
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.7
+      - YouNote-network
     volumes:
       - type: bind
         source: /var/log/
@@ -74,8 +72,7 @@ services:
       ports:
         - "8082:8082"
       networks:
-        YouNote-network:
-          ipv4_address: 10.5.0.8
+        - YouNote-network
       volumes:
         - type: bind
           source: /var/log/
@@ -92,8 +89,7 @@ services:
     ports:
       - "127.0.0.1:5432:5432"
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.3
+      - YouNote-network
     volumes:
       - ./build/sql/create_tables.sql:/docker-entrypoint-initdb.d/initdb.sql
       - younote-db-data:/var/lib/postgresql/data
@@ -126,8 +122,7 @@ services:
       - "443:443"
       - "80:80"
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.2
+      - YouNote-network
   redis:
     container_name: redis
     image: redis:latest
@@ -143,8 +138,7 @@ services:
     env_file:
       - .env
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.4
+      - YouNote-network
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.19
     container_name: elastic
@@ -171,17 +165,12 @@ services:
     env_file:
       - .env
     networks:
-      YouNote-network:
-        ipv4_address: 10.5.0.5
+      - YouNote-network
 
 networks:
   YouNote-network:
     name: YouNote-network
     driver: bridge
-    ipam:
-     config:
-       - subnet: 10.5.0.0/16
-         gateway: 10.5.0.1
 
 volumes:
   younote-db-data:
