--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -39,9 +39,9 @@ elastic:
   elastic_search_value_min_length: 3
 grpc:
   auth_port: 8081
-  auth_ip: 10.5.0.7
+  auth_ip: auth
   note_port: 8082
-  note_ip: 10.5.0.8
+  note_ip: note
 
 
 
