--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,25 @@ services:
       - type: bind
         source: /var/log/
         target: /var/log/
+  stat:
+    container_name: stat
+    build:
+      context: .
+      dockerfile: ./build/stat.Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_started
+    restart: always
+    ports:
+      - "8083:8083"
+    networks:
+      - YouNote-network
+    volumes:
+      - type: bind
+        source: /var/log/
+        target: /var/log/
   postgres:
     env_file:
       - .env
