--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,8 @@ http {
 
             client_max_body_size 40M;
             proxy_pass http://you-note.ru:8080/api/;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
 
         location /images/ {
