--- a/nginx.conf
+++ b/nginx.conf
@@ -38,6 +38,8 @@ http {
             proxy_pass http://you-note.ru:8080/api/;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header Host $http_host;
+            proxy_http_version 1.1;
         }
 
         location /images/ {
