--- a/nginx.conf
+++ b/nginx.conf
@@ -37,9 +37,12 @@ http {
             client_max_body_size 40M;
             proxy_pass http://you-note.ru:8080/api/;
             proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $http_host;
             proxy_http_version 1.1;
+
+            proxy_read_timeout 86400s;
+            proxy_send_timeout 86400s;
         }
 
         location /images/ {
