--- a/internal/pkg/config/config.yaml
+++ b/internal/pkg/config/config.yaml
@@ -1,8 +1,15 @@
+main:
+  port: 8080
+  read_timeout: 10s
+  write_timeout: 10s
+  read_header_timeout: 10s
+  idle_timeout: 30s
+  shutdown_timeout: 30s
 auth_handler:
-  avatar_max_form_data_size:  31457280 #5 * 1024 * 1024
+  avatar_max_form_data_size:  31457280 # 5 * 1024 * 1024
   avatar_file_types:
     image/jpeg: .jpeg
-    image/png: .png    
+    image/png: .png
   qr_issuer: YouNote
   jwt:
     jwt_cookie: YouNoteJWT
@@ -40,8 +47,10 @@ elastic:
 grpc:
   auth_port: 8081
   auth_ip: auth
+  auth_metrics_port: 7071
   note_port: 8082
   note_ip: note
+  note_metrics_port: 7072
 hub:
   period: 100ms
   cache_ttl: 1m0s
