--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,12 @@ http {
             try_files $uri = 404;
         }
 
+        location /attaches/ {
+            alias /opt/attaches/;
+            etag on;
+            try_files $uri = 404;
+        }
+
         location / {
             alias /opt/public/;
             try_files $uri $uri/ /index.html;
