--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -6,6 +6,17 @@ on:
       - main
       - dev
 jobs:
+
+  govulncheck_job:
+    runs-on: ubuntu-latest
+    name: Run govulncheck
+    steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+           go-version-input: 1.21
+           go-package: ./...
+
   you-note-linters:
     name: linters
     runs-on: ubuntu-latest
