--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -36,8 +36,9 @@ jobs:
           go-version: '1.21'
       - name: Run test with cover
         run: |
+          sudo apt-get update
+          sudo apt-get upgrade
           sudo apt-get install libwebp-dev
-          sudo apt-get install libwebp-dev --fix-missing
           sudo apt-get install -y wkhtmltopdf
       - name: Build
         run: go build -v ./...
