--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -23,6 +23,7 @@ jobs:
         uses: golangci/golangci-lint-action@v4
         with:
           version: v1.54
+          args: --timeout 5m --verbose
 
   you-note-tests:
     name: tests
