--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -45,10 +45,19 @@ jobs:
         run: go build -v ./...
       - name: Test
         run: go test -v ./...
-
+  govulncheck_job:
+    needs: you-note-tests
+    runs-on: ubuntu-latest
+    name: Run govulncheck
+    steps:
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+           go-version-input: 1.22.2
+           go-package: ./...
   you-note-deploy:
     name: deploy YouNote
-    needs: you-note-tests
+    needs: govulncheck_job
     runs-on: ubuntu-latest
     steps:
       - name: Pull code
