--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -45,25 +45,25 @@ jobs:
         run: go build -v ./...
       - name: Test
         run: go test -v ./...
-#  govulncheck_job:
-#    needs: you-note-tests
-#    runs-on: ubuntu-latest
-#    name: govulncheck
-#    steps:
-#      - name: Run test with cover
-#        run: |
-#          sudo apt-get update
-#          sudo apt-get upgrade
-#          sudo apt-get install libwebp-dev
-#          sudo apt-get install -y wkhtmltopdf
-#      - id: govulncheck
-#        uses: golang/govulncheck-action@v1
-#        with:
-#           go-version-input: 1.22.2
-#           go-package: ./...
+  govulncheck_job:
+    needs: you-note-tests
+    runs-on: ubuntu-latest
+    name: govulncheck
+    steps:
+      - name: Run test with cover
+        run: |
+          sudo apt-get update
+          sudo apt-get upgrade
+          sudo apt-get install libwebp-dev
+          sudo apt-get install -y wkhtmltopdf
+      - id: govulncheck
+        uses: golang/govulncheck-action@v1
+        with:
+           go-version-input: 1.22.3
+           go-package: ./...
   you-note-deploy:
     name: deploy YouNote
-    needs: you-note-tests
+    needs: govulncheck_job
     runs-on: ubuntu-latest
     steps:
       - name: Pull code
