--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ events {}
 http {
     include mime.types;
 
-    limit_req_zone $binary_remote_addr zone=ip:1m rate=1000r/s;
-    limit_conn_zone $binary_remote_addr zone=addr:1m;
+    #limit_req_zone $binary_remote_addr zone=ip:1m rate=1000r/s;
+    #limit_conn_zone $binary_remote_addr zone=addr:1m;
 
     server {
         listen 443 ssl;
@@ -29,8 +29,8 @@ http {
 
 
         location /api/ {
-            limit_req zone=ip burst=12 delay=8;
-            limit_conn addr 5;
+            #limit_req zone=ip burst=12 delay=8;
+            #limit_conn addr 5;
 
             proxy_set_header X-Real-IP $remote_addr;
 
